# grimoire-css-transmutator

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build_release.yml  deploy_gcsst_ui.yml  quality.yml
gcsst/: Cargo.toml  README.md  ROADMAP.md
gcsst-ui/: Cargo.toml  Shuttle.toml
gcsst-ui/grimoire/config/: grimoire.config.json
gcsst-ui/src/: main.rs
gcsst-ui/static/: build.css
gcsst-ui/templates/: index.html
gcsst/src/: lib.rs  main.rs
src/: lib.rs  main.rs
