[package]
name = "grimoire_css_transmutator"
version = "0.9.0"
edition = "2021"
authors = ["Dmitrii Shatokhin <dmtrshatokhin@gmail.com>"]
description = "A tool for seamlessly transforming CSS into Grimoire CSS spells."
license = "MIT"
keywords = ["css", "css-transofrmer", "styling", "web", "system"]
categories = ["web-programming", "development-tools"]
homepage = "https://github.com/persevie/grimoire_css_transmutator"
documentation = "https://docs.rs/grimoire_css_transmutator"
repository = "https://github.com/persevie/grimoire_css_transmutator"
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]

[lib]
name = "grimoire_css_transmutator_lib"
crate-type = ["lib"]

[profile.release]
lto = true
codegen-units = 1

[dev-dependencies]
tempfile = "3.13.0"

[dependencies]
cssparser = "0.34.0"
glob = "0.3.1"
grimoire_css = "1.5.0"
regex = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
