[package]
name = "gcsst-ui"
version = "0.3.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.48.0"
shuttle-runtime = "0.48.0"
grimoire_css = "1.2.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-files = "0.6.6"
dotenv = "0.15.0"
gcsst = "0.6.0"
