[package]
name = "gcsst"
version = "0.5.0"
edition = "2021"
authors = ["Dmitrii Shatokhin <dmtrshatokhin@gmail.com>"]
description = "A tool for seamlessly transforming CSS into Grimoire CSS spells."
license = "MIT"
keywords = ["css", "css-transofrmer", "styling", "web", "system"]
categories = ["web-programming", "development-tools"]
homepage = "https://github.com/persevie/grimoire-css-transmute"
documentation = "https://docs.rs/grimoire-css-transmute"
repository = "https://github.com/persevie/grimoire-css-transmute"
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]

[lib]
name = "gcsst_lib"
crate-type = ["lib"]

[profile.release]
lto = true
codegen-units = 1

[dev-dependencies]
tempfile = "3.13.0"

[dependencies]
cssparser = "0.34.0"
glob = "0.3.1"
grimoire_css = "1.0.0"
regex = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
